@@ -52,4 +52,9 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '--enable-native-access=ALL-UNNAMED'
+}
+
+tasks.named('bootRun') {
+	jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
